# word-checksum-counter

./: .clang-format  CMakeLists.txt  README.md
src/: checksum-counter.cpp  checksum-counter.h  counter-builder.h  counter.cpp  counter.h  main.cpp  u32word.cpp  u32word.h  word-counter.cpp  word-counter.h
tests/: test-wordcounter.cpp  test.cpp
